hidden details > summary arrows locations

--- a/directories/fiware-summit/locations/style.css
+++ b/directories/fiware-summit/locations/style.css
@@ -77,9 +77,12 @@ a:focus {
     padding: 10px 0 0 10px;
 }
 
-details summary::-webkit-details-marker {
-    display:none;
-}
+details > summary {
+    list-style: none;
+  }
+  details > summary::-webkit-details-marker {
+    display: none;
+  }
 
 .map-overlay input {
     margin: 2px;
