--- a/directories/organisations/style.css
+++ b/directories/organisations/style.css
@@ -70,6 +70,14 @@
     padding: 10px 0 0 10px;
 }
 
+details > summary {
+    list-style: none;
+  }
+
+details > summary::-webkit-details-marker {
+    display: none;
+}
+
 #nav-filter {
     display: flex;
     flex-direction: row;
