--- a/bin/templates/events/social-media.hbs
+++ b/bin/templates/events/social-media.hbs
@@ -10,21 +10,13 @@
 
 <meta name="description" content="{{excerpt}}">
 <meta name="keywords" content="FIWARE,{{type}}">
-{{#if (eq numSpeakers 0)}}
-<meta http-equiv="refresh" content="1; url=https://www.fiware.org/global-summit/agenda" />
-{{else}}
-{{#if description}}
-<meta http-equiv="refresh" content="1; url=https://www.fiware.org/global-summit/agenda/program?id={{createClass title}}" />
-{{else}}
-<meta http-equiv="refresh" content="1; url=https://www.fiware.org/global-summit/agenda/program-details-summary/?id={{createClass title}}" />
-{{/if}}
-{{/if}}
+<meta http-equiv="refresh" content="1; url=https://www.fiware.org/events/event-details?id={{yearMonth}}-{{createClass title}}" />
 <!-- Open Graph Tags -->
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
 <meta property="og:title" content="FIWARE {{type}}: {{title}}">
 <meta property="og:description" content="{{excerpt}}">
-<meta property="og:url" content="https://www.fiware.org/global-summit/agenda/program?id={{createClass title}}">
+<meta property="og:url" content="https://www.fiware.org/events/event-details?id={{yearMonth}}-{{createClass title}}">
 <meta property="og:site_name" content="FIWARE">
 <meta property="og:image" content="{{img}}">
 <meta property="og:image:secure_url" content="{{img}}">
