--- a/bin/templates/events/social-media.hbs
+++ b/bin/templates/events/social-media.hbs
@@ -3,7 +3,11 @@
 <head>
 
 <!-- W3C HTML Tags -->
-<title>FIWARE {{type}}: {{title}}</title>
+{{#if (eq type 'Webinar')}}
+<title>Webinar: {{title}}</title>
+{{else}}
+<title>{{title}}</title>
+{{/if}}
 <meta name="robots" content="follow, index, noarchive, max-snippet:-1, max-video-preview:-1, max-image-preview:large"/>
 <link rel="canonical" href="https://www.fiware.org{{social}}" />
 <link rel="shortcut icon" href="https://www.fiware.org/wp-content/uploads/2017/11/favicon-1.png" />
@@ -14,7 +18,11 @@
 <!-- Open Graph Tags -->
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
-<meta property="og:title" content="FIWARE {{type}}: {{title}}">
+{{#if (eq type 'Webinar')}}
+<meta property="og:title" content="Webinar: {{title}}">
+{{else}}
+<meta property="og:title" content="{{title}}">
+{{/if}}
 <meta property="og:description" content="{{excerpt}}">
 <meta property="og:url" content="https://www.fiware.org/events/event-details?id={{yearMonth}}-{{createClass title}}">
 <meta property="og:site_name" content="FIWARE">
@@ -27,7 +35,11 @@
 
 <!-- Twitter Tags -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="FIWARE {{type}}: {{title}}">
+{{#if (eq type 'Webinar')}}
+<meta name="twitter:title" content="Webinar: {{title}}">
+{{else}}
+<meta name="twitter:title" content="{{title}}">
+{{/if}}
 
 <meta property="twitter:description" content="{{excerpt}}">
 <meta name="twitter:site" content="@FIWARE">
@@ -52,7 +64,7 @@ body {
 </style>
 </head>
 <body>
-	<h1>FIWARE {{type}}: {{title}}</h1>
+	<h1>{{title}}</h1>
    {{{description}}}
 </body>
 </html>
