--- a/directories/events-directory/event-details/style.css
+++ b/directories/events-directory/event-details/style.css
@@ -183,6 +183,54 @@ dd.chip-domain {
   user-select: none;
 }
 
+.btn-primary, .btn-primary:visited {
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 4px;
+  font-size: 14px;
+  line-height: 18px;
+  color: #000;
+  background-color: rgba(0, 0, 0, 0);
+  padding: 8px 12px 8px 10px;
+  border: 1px solid #000;
+  border-radius: 4px;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.btn-primary:hover, .btn-primary:active, .btn-primary:focus {
+  background-color: rgba(0, 0, 0, 1);
+  color: #fff;
+}
+
+.btn-secondary {
+  float: right;
+  margin-top: 40px;
+}
+
+.btn-secondary, .btn-secondary:visited {
+  width: fit-content;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  font-size: 15px;
+  color: #000;
+  background-color: rgba(235, 235, 235, 0);
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.btn-secondary:hover, .btn-secondary:active, .btn-secondary:focus {
+  background-color: rgba(235, 235, 235, 1);
+  color: #000;
+}
+
 .btn-icon {
   cursor: pointer;
 }
