--- a/directories/fiware-summit/sponsors/style.css
+++ b/directories/fiware-summit/sponsors/style.css
@@ -226,14 +226,14 @@
 }
 
 .icons {
+    display: none;
+    /* flex-direction: row;
+    justify-content: center;
+    gap: 10px;
     padding: 20px 0px;
     margin-top: 5px;
     border-top: 1px solid #000;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 10px;
-    cursor: default!important;
+    cursor: default!important; */
 }
 
 .maplibregl-popup-content .icons {
