--- a/directories/fiware-summit/sponsors/style.css
+++ b/directories/fiware-summit/sponsors/style.css
@@ -823,7 +823,7 @@
 
 .twitter-link:hover {
     background-color: #000;
-    background-image: url(https://www.fiware.org/custom/icons/orange/twitter.svg);
+    background-image: url(https://www.fiware.org/custom/icons/white/twitter.svg);
 }
 
 /* .linkedin-link::before {
@@ -865,7 +865,7 @@
 
 .linkedin-link:hover {
     background-color: #000;
-    background-image: url(https://www.fiware.org/custom/icons/orange/linkedin.svg);
+    background-image: url(https://www.fiware.org/custom/icons/white/linkedin.svg);
 }
 
 .tingle-modal .bio-modal p {
@@ -1327,12 +1327,17 @@
 
 /* Custom select */
 
+.dropdown-container .filter-element {
+    max-width: 250px;
+}
+
 select {
     -webkit-appearance: none !important;
     -moz-appearance: none !important;
-    background-color: #fafafa;
-    background-image: url(https://www.fiware.org/fiware-summit/naples-2024/assets/icons/ico_chevron_bottom.png);
-    background-position: 100%;
+    background-color: rgba(255,255,255,0);
+    background-image: url(https://www.fiware.org/fiware-summit/rabat-2025/assets/images/ico/arrow-down.svg);
+    background-position: 97%;
+    background-size: 24px;
     background-repeat: no-repeat;
 }
 
@@ -1341,7 +1346,7 @@ select::-ms-expand {
 }
 
 .filter-element select {
-    background-color: rgba(0, 0, 0, 0);
+    background-color: rgba(0,0,0,0);
     border-radius: 30px;
     border: 1px solid #000;
     color: #000;
@@ -1350,12 +1355,11 @@ select::-ms-expand {
     padding: 8px 16px;
     font-size: 15px;
     width: 100%;
-    margin: 10px 0 10px 0;
+    margin: 5px 0 10px 0;
 }
 
 .filter-element select:active,
 .filter-element select:focus {
-    background-color: rgba(0, 0, 0, 0);
     border: 1px solid #000;
     color: #000;
     box-shadow: none;
@@ -1448,7 +1452,7 @@ input[type="checkbox"]+label::before {
     height: 40px;
     width: 40px;
     background-color: rgba(0, 0, 0, 0);
-    border: 2px solid #000;
+    border: 1px solid #000;
     border-radius: 24px;
 }
 
@@ -1503,10 +1507,10 @@ input[type="checkbox"]:checked+label::after {
     color: #000;
     background-color: rgba(0, 0, 0, 0);
     padding: 8px 12px;
+    border: 1px solid #000;
     border-radius: 4px;
     transition: all 0.2s ease-in-out;
     cursor: pointer;
-    border: none !important;
 }
 
 .sort-element button:hover {
