--- a/directories/fiware-summit/sponsors/style.css
+++ b/directories/fiware-summit/sponsors/style.css
@@ -208,7 +208,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 0;
+    gap: 5px;
     font-size: 14px;
     line-height: 18px;
     color: #000;
