--- a/directories/fiware-summit/locations/style.css
+++ b/directories/fiware-summit/locations/style.css
@@ -757,6 +757,7 @@ details > summary::-webkit-details-marker {
 .maplibregl-popup-content .icons {
     padding: 12px 15px 0;
     margin-top: 0;
+    justify-content: flex-start;
 }
 
 .icon::before {
