--- a/bin/templates/careers/card.hbs
+++ b/bin/templates/careers/card.hbs
@@ -1,4 +1,23 @@
- {{#if (gt @index 9)}}loading="lazy"{{/if}}{{#each this}}
+{{#if (eq this.length 0)}}
+    <div class='grid-item'>
+        <div class="gridElementLogoContainer">
+                <picture>
+                    <source srcset="https://www.fiware.org/wp-content/directories/careers/images/office-manager.webp" type="image/webp"/>
+                    <img class="gridElementLogo" src="https://www.fiware.org/wp-content/directories/careers/images/office-manager.svg" loading="lazy"/>
+                </picture>
+        </div>
+        <div class="gridElementTextContainer">
+            <a href="./job">
+               
+                <h6 class="cat-name">No Open Positions Found</h6>
+                <h4 class="excerpt-rd">There are no job openings to be found at the moment.</h4>
+            </a>
+      
+        </div>
+    </div>
+{{/if}}
+
+{{#each this}}
     <div class='grid-item {{createClass type}} {{createClasses domain}}'>
         <a href="./job?id={{createClass name}}">
             <div class="gridElementLogoContainer">
