--- a/css/agenda-four.css
+++ b/css/agenda-four.css
@@ -91,6 +91,10 @@ body {
   color: #108763;
 }
 
+.title-type.light-purple {
+  color: #9e3162;
+}
+
 .topic-icon {
   width: 140px;
   background-color: #8ad2dc;
@@ -112,6 +116,10 @@ body {
 
 .topic-icon.light-green {
   background-color: #d0ede4;
+}
+
+.topic-icon.light-purple {
+  background-color: #f5eaef;
 }
 
 .panel-moderated-by {
