--- a/css/agenda-many.css
+++ b/css/agenda-many.css
@@ -71,6 +71,11 @@ body {
       color: #108763;
     }
 
+    .track.light-purple {
+      background-color: #f5eaef;
+      color: #9e3162;
+    }
+
     .title-type {
       padding-right: 1em;
     }
@@ -89,6 +94,10 @@ body {
 
     .title-type.light-green {
       color: #108763;
+    }
+
+    .title-type.light-purple {
+      color: #9e3162;
     }
     
     .topic-icon {
@@ -112,6 +121,10 @@ body {
     
     .topic-icon.light-green {
       background-color: #d0ede4;
+    }
+
+    .topic-icon.light-purple {
+      color: #9e3162;
     }
 
     .panel-moderated-by {
