--- a/bin/templates/agenda/card.hbs
+++ b/bin/templates/agenda/card.hbs
@@ -3,7 +3,7 @@
 
 <div class='grid-item {{createClass track}} {{#if (ne session '')}}{{createClass session}}{{else}}{{createClass title}}{{/if}}{{#each speakers}} {{createClass name}}{{/each}} {{createClass shortDate}}'>
     <div class="gridElementTextContainer{{#if moderated}} moderated{{/if}}">
-      {{#if (gt numSpeakers 0)}}
+      {{#if (or (gt numSpeakers 0) (ne description ''))}}
       <a href="./{{#if description}}program{{else}}program-details-summary{{/if}}?id={{createClass title}}">
       {{/if}}
         <div class="chip-track">
@@ -23,7 +23,7 @@
           <span class="place">{{location}}</span>
           {{/if}}
         </div>
-      {{#if (gt numSpeakers 0)}}
+      {{#if (or (gt numSpeakers 0) (ne description ''))}}
       </a>
       {{/if}}
     </div>
