--- a/css/stage/four.css
+++ b/css/stage/four.css
@@ -1,298 +1,317 @@
 body {
-  width: 1920px;
-  height: 1080px;
-  margin: 0;
-  background-image: url("https://fiware-ops.github.io/staging/directories/fiware-summit/stage-background.png");
-  background-repeat: no-repeat;
-  background-position: top 0 left 0;
-  font-family: Montserrat, Sans-serif;
-}
+    width: 1920px;
+    height: 1080px;
+    margin: 0;
+    background-image: url("https://fiware-ops.github.io/staging/directories/fiware-summit/stage-background.png");
+    background-repeat: no-repeat;
+    background-position: top 0 left 0;
+    font-family: Montserrat, Sans-serif;
+  }
 
-.track {
-  font-weight: 500;
-  border-radius: 25px;
-  padding: 6px 12px;
-  position: absolute;
-  top: 75px;
-  left: 433px;
-  border: solid 0px #000000;
-  background-color: #ffffff;
-}
+  .track {
+    font-weight: 500;
+    border-radius: 25px;
+    padding: 6px 12px;
+    position: absolute;
+    top: 130px;
+    left: 692px;
+    border: solid 0px #000000;
+    background-color: #ffffff;
+  }
 
-.panel-title {
-  position: absolute;
-  top: 120px;
-  left: 433px;
-  width: 690px;
-}
-.title {
-  font-size: 28px;
-  line-height: 36px;
-  font-weight: 700;
-  color: #000000;
-}
+  .panel-title {
+    position: absolute;
+    top: 206px;
+    left: 692px;
+    width: 690px;
+  }
+  .title {
+    font-size: 28px;
+    line-height: 36px;
+    font-weight: 700;
+    color: #000000;
+  }
 
-.subtitle {
-  margin-top: 8px;
-  font-size: 24px;
-  line-height: 1.3em;
-  font-weight: 500;
-  color: #4c4c4c;
-}
+  .subtitle {
+    margin-top: 8px;
+    font-size: 24px;
+    line-height: 1.3em;
+    font-weight: 500;
+    color: #4c4c4c;
+  }
 
-.panel-info {
-  position: absolute;
-  top: 257px;
-  left: 50px;
-  width: 300px;
-  font-size: 24px;
-  line-height: 34px;
-  font-weight: 500;
-  color: white;
-}
+  .panel-info {
+    position: absolute;
+    top: 442px;
+    left: 71px;
+    width: 480px;
+    font-size: 24px;
+    line-height: 34px;
+    font-weight: 500;
+    color: white;
+  }
 
-.track.light-blue {
-  background-color: #cce0f0;
-  color: #005fb9;
-}
-
-.track.cyan {
-  background-color: #ddf1f4;
-  color: #0891b2;
-}
-
-.track.light-yellow {
-  background-color: #fdf6cf;
-  color: #faa307;
-}
-
-.track.light-green {
-  background-color: #d0ede4;
-  color: #108763;
-}
-
-.title-type {
-  padding-right: 1em;
-}
-
-.title-type.light-blue {
-  color: #005fb9;
-}
-
-.title-type.cyan {
-  color: #0891b2;
-}
-
-.title-type.light-yellow {
-  color: #faa307;
-}
-
-.title-type.light-green {
-  color: #108763;
-}
-
-.title-type.light-purple {
-  color: #9e3162;
-}
-
-.topic-icon {
-  width: 140px;
-  background-color: #8ad2dc;
-  border-radius: 4px;
-  float: right;
-}
-
-.topic-icon.light-blue {
-  background-color: #cce0f0;
-}
-
-.topic-icon.cyan {
+  .track.light-blue {
+    background-color: #cce0f0;
+    color: #005fb9;
+  }
+  
+  .track.cyan {
     background-color: #ddf1f4;
-}
+    color: #0891b2;
+  }
+  
+  .track.light-yellow {
+    background-color: #fdf6cf;
+    color: #faa307;
+  }
+  
+  .track.light-green {
+    background-color: #d0ede4;
+    color: #108763;
+  }
 
-.topic-icon.light-yellow {
-  background-color: #fdf6cf;
-}
+  .track.light-purple {
+    background-color: #f5eaef;
+    color: #9e3162;
+  }
+  
+  .topic-icon {
+    width: 224px;
+    background-color: #8ad2dc;
+    border-radius: 4px;
+    float: right;
+  }
+  
+  .topic-icon.light-blue {
+    background-color: #cce0f0;
+  }
+  
+  .topic-icon.cyan {
+      background-color: #ddf1f4;
+  }
+  
+  .topic-icon.light-yellow {
+    background-color: #fdf6cf;
+  }
+  
+  .topic-icon.light-green {
+    background-color: #d0ede4;
+  }
 
-.topic-icon.light-green {
-  background-color: #d0ede4;
-}
+  .topic-icon.light-purple {
+    background-color: #f5eaef;
+  }
 
-.topic-icon.light-purple {
-  background-color: #f5eaef;
-}
+  .panel-moderated-by {
+    width: 1104px;
+    position: absolute;
+    top: 473px;
+    left: 692px;
+    font-size: 18px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #4c4c4c;
+  }
 
-.panel-moderated-by {
-  width: 690px;
-  position: absolute;
-  top: 275px;
-  left: 433px;
-  font-size: 18px;
-  font-weight: 500;
-  text-transform: uppercase;
-  color: #4c4c4c;
-}
+  .panel-speakers {
+    width: 1104px;
+    position: absolute;
+    top: 568px;
+    left: 692px;
+  }
 
-.panel-speakers {
-  width: 690px;
-  position: absolute;
-  top: 290px;
-  left: 433px;
-}
+  .panel-speakers.more {
+    top: 516px;
+  }
 
-.panel-speakers.more {
-  top: 300px;
-}
+  .profile-picture {
+    width: 320px;
+    min-width: 320px;
+    max-width: 320px;
+    height: 320px;
+  }
 
-.profile-picture {
-  width: 200px;
-  min-width: 200px;
-  max-width: 200px;
-  height: 200px;
-}
+  .profile-picture img {
+    width: 100%;
+    border-radius: 110px;
+  }
 
-.profile-picture img {
-  width: 100%;
-  border-radius: 110px;
-}
+  .profile-picture-small {
+    width: 100%;
+    align-items: center;
+  }
 
-.profile-picture-small {
-  /* width: 100%; */
-  align-items: center;
-}
+  .profile-picture-small img {
+    margin: auto;
+    width: 208px;
+    min-width: 208px;
+    max-width: 208px;
+    height: 208px;
+    display: block;
+    width: 100%;
+    border-radius: 128px;
+  }
 
-.profile-picture-small img {
-  margin: auto;
-  width: 100px;
-  min-width: 100px;
-  max-width: 100px;
-  height: 100px;
-  display: block;
-  width: 100%;
-  border-radius: 80px;
-}
+  .panel-session {
+    width: 1104px;
+    position: absolute;
+    top: 447px;
+    left: 692px;
+  }
 
-.speakers {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 40px;
-}
+  .session-picture {
+    width: 448px;
+    min-width: 448px;
+    max-width: 448px;
+    height: 448px;
+    margin: 0 auto;
+  }
 
-.speakers.more {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto;
-  gap: 10px;
-}
+  .session-picture img {
+    width: 100%;
+    border-radius: 176px;
+  }
 
-.speaker {
-  min-width: 45%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
+  .session-picture.light-blue {
+    background-color: #cce0f0;
+    color: #005fb9;
+    border-color: #005fb9;
+  }
 
-.speaker-info {
-  margin-left: 20px;
-}
+  .session-picture.light-yellow {
+    background-color: #f3f3de;
+    color: #5c5c00;
+    border-color: #5c5c00;
+  }
 
-.speakers.more .speaker-info {
-  margin-left: 0;
-}
+  .session-picture.light-green {
+    background-color: #b8e5d7;
+    color: #1b493a;
+    border-color: #1b493a;
+  }
 
-.grid-container .speaker-info {
-  margin-left: 0px;
-  padding-top: 0px;
-  text-align: left;
-}
 
-.speaker-info-small {
-  padding-top: 5px;
-  padding-bottom: 5px;
-}
+  .speakers {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+  }
 
-.speaker-name {
-  font-size: 28px;
-  line-height: 40px;
-  font-weight: 700;
-  color: #000000;
-  padding: 0;
-  margin-bottom: 5px;
-}
+  .speakers.more {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    gap: 10px;
+  }
 
-.grid-container .speaker-name {
-  font-size: 18px;
-  line-height: 1.3em;
-  font-weight: 600;
-  color: #000000;
-  padding: 0;
-  margin-bottom: 5px;
-}
+  .speaker {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
 
-.speakers.more .speaker-name {
-  font-size: 18px;
-  line-height: 24px;
-  font-weight: 600;
-  color: #000000;
-  padding: 0;
-  margin-bottom: 0;
-}
+  .speaker-info {
+    margin-left: 20px;
+  }
 
-.speaker-job-title {
-  font-size: 28px;
-  line-height: 36px;
-  font-weight: 400;
-  color: #696969;
-  padding: 0;
-  margin-bottom: 5px;
-}
+  .speakers.more .speaker-info {
+    margin-left: 0;
+  }
 
-.grid-container .speaker-job-title {
-  font-size: 18px;
-  line-height: 1em;
-  font-weight: 400;
-  color: #696969;
-  padding: 0;
-  margin-bottom: 8px;
-}
+  .grid-container .speaker-info {
+    margin-left: 0px;
+    padding-top: 0px;
+    text-align: center;
+  }
 
-.speakers.more .speaker-job-title {
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 400;
-  color: #696969;
-  padding: 0;
-  margin-bottom: 0;
-}
+  .speaker-info-small {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
 
-.speaker-company {
-  font-size: 24px;
-  line-height: 32px;
-  font-weight: 400;
-  color: #696969;
-  padding: 0;
-}
+  .speaker-name {
+    font-size: 28px;
+    line-height: 40px;
+    font-weight: 700;
+    color: #000000;
+    padding: 0;
+    margin-bottom: 5px;
+  }
 
-.grid-container .speaker-company {
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 400;
-  color: #696969;
-  padding: 0;
-}
+  .grid-container .speaker-name {
+    font-size: 20px;
+    line-height: 1.3em;
+    font-weight: 600;
+    color: #000000;
+    padding: 0;
+    margin-bottom: 5px;
+  }
 
-.speakers.more .speaker-company {
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 400;
-  color: #696969;
-  padding: 0;
-}
+  .speakers.more .speaker-name {
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 600;
+    color: #000000;
+    padding: 0;
+    margin-bottom: 0;
+  }
 
-.grid-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 15px;
-}
+  .speaker-job-title {
+    font-size: 28px;
+    line-height: 36px;
+    font-weight: 400;
+    color: #696969;
+    padding: 0;
+    margin-bottom: 5px;
+  }
+
+  .grid-container .speaker-job-title {
+    font-size: 18px;
+    line-height: 1em;
+    font-weight: 400;
+    color: #696969;
+    padding: 0;
+    margin-bottom: 8px;
+  }
+
+  .speakers.more .speaker-job-title {
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
+    color: #696969;
+    padding: 0;
+    margin-bottom: 0;
+  }
+
+  .speaker-company {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 400;
+    color: #696969;
+    padding: 0;
+  }
+
+  .grid-container .speaker-company {
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
+    color: #696969;
+    padding: 0;
+  }
+
+  .speakers.more .speaker-company {
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
+    color: #696969;
+    padding: 0;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-auto-columns: minmax(0, 1fr);
+    /* grid-auto-flow: column; */
+    align-items: center;
+    gap: 15px;
+  }
