--- a/css/stage/three.css
+++ b/css/stage/three.css
@@ -1,4 +1,4 @@
-  body {
+body {
     width: 1920px;
     height: 1080px;
     margin: 0;
@@ -13,16 +13,16 @@
     border-radius: 25px;
     padding: 6px 12px;
     position: absolute;
-    top: 75px;
-    left: 433px;
+    top: 130px;
+    left: 692px;
     border: solid 0px #000000;
     background-color: #ffffff;
   }
 
   .panel-title {
     position: absolute;
-    top: 120px;
-    left: 433px;
+    top: 206px;
+    left: 692px;
     width: 690px;
   }
   .title {
@@ -42,9 +42,9 @@
 
   .panel-info {
     position: absolute;
-    top: 257px;
-    left: 50px;
-    width: 300px;
+    top: 442px;
+    left: 71px;
+    width: 480px;
     font-size: 24px;
     line-height: 34px;
     font-weight: 500;
@@ -77,7 +77,7 @@
   }
   
   .topic-icon {
-    width: 140px;
+    width: 224px;
     background-color: #8ad2dc;
     border-radius: 4px;
     float: right;
@@ -104,10 +104,10 @@
   }
 
   .panel-moderated-by {
-    width: 690px;
+    width: 1104px;
     position: absolute;
-    top: 275px;
-    left: 433px;
+    top: 473px;
+    left: 692px;
     font-size: 18px;
     font-weight: 500;
     text-transform: uppercase;
@@ -115,21 +115,21 @@
   }
 
   .panel-speakers {
-    width: 690px;
+    width: 1104px;
     position: absolute;
-    top: 310px;
-    left: 433px;
+    top: 568px;
+    left: 692px;
   }
 
   .panel-speakers.more {
-    top: 300px;
+    top: 516px;
   }
 
   .profile-picture {
-    width: 200px;
-    min-width: 200px;
-    max-width: 200px;
-    height: 200px;
+    width: 320px;
+    min-width: 320px;
+    max-width: 320px;
+    height: 320px;
   }
 
   .profile-picture img {
@@ -144,14 +144,33 @@
 
   .profile-picture-small img {
     margin: auto;
-    width: 130px;
-    min-width: 130px;
-    max-width: 130px;
-    height: 130px;
+    width: 208px;
+    min-width: 208px;
+    max-width: 208px;
+    height: 208px;
     display: block;
     width: 100%;
-    border-radius: 80px;
+    border-radius: 128px;
   }
+
+  .session-picture.light-blue {
+    background-color: #cce0f0;
+    color: #005fb9;
+    border-color: #005fb9;
+  }
+
+  .session-picture.light-yellow {
+    background-color: #f3f3de;
+    color: #5c5c00;
+    border-color: #5c5c00;
+  }
+
+  .session-picture.light-green {
+    background-color: #b8e5d7;
+    color: #1b493a;
+    border-color: #1b493a;
+  }
+
 
   .speakers {
     display: flex;
