--- a/bin/templates/agenda/stage-image.hbs
+++ b/bin/templates/agenda/stage-image.hbs
@@ -235,7 +235,7 @@
     {{/if}}
     {{/if}}
     {{/if}}
-    <div class="panel-info">
+    <!--<div class="panel-info">
       <div class="date-time">
         <span class="date">{{event.shortDate}}</span>
         <br/>
@@ -245,6 +245,6 @@
         <span class="place">{{event.location}}</span>
         {{/if}}
        </div>
-    </div>
+    </div>-->
 
   </body></html>
