--- a/css/stage/four.css
+++ b/css/stage/four.css
@@ -29,8 +29,8 @@ body {
 }
 
 .title {
-    font-size: 44px;
-    line-height: 60px;
+    font-size: 48px;
+    line-height: 64px;
     font-weight: 700;
     color: #000000;
 }
@@ -132,8 +132,8 @@ body {
 }
 
 .panel-speakers {
-    width: 1100px;
-    max-width: 1090px;
+    width: 1040px;
+    max-width: 1040px;
     position: absolute;
     top: 460px;
     left: 692px;
@@ -158,7 +158,7 @@ body {
 }
 
 .profile-picture-small {
-    width: 100%;
+    width: auto;
     align-items: center;
 }
 
@@ -171,26 +171,6 @@ body {
     display: block;
     width: 100%;
     border-radius: 128px;
-}
-
-.panel-session {
-    width: 1104px;
-    position: absolute;
-    top: 447px;
-    left: 692px;
-}
-
-.session-picture {
-    width: 448px;
-    min-width: 448px;
-    max-width: 448px;
-    height: 448px;
-    margin: 0 auto;
-}
-
-.session-picture img {
-    width: 100%;
-    border-radius: 176px;
 }
 
 .session-picture.light-blue {
@@ -214,7 +194,9 @@ body {
 .speakers {
     display: flex;
     flex-direction: row;
-    gap: 80px;
+    justify-content: flex-start;
+    gap: 60px;
+    flex-wrap: wrap;
 }
 
 .speakers.more {
@@ -231,7 +213,7 @@ body {
 }
 
 .speaker-info {
-    margin-left: 20px;
+    margin-left: 30px;
 }
 
 .speakers.more .speaker-info {
@@ -240,6 +222,7 @@ body {
 
 .grid-container .speaker-info {
     margin-left: 0px;
+    margin-top: 0px;
     padding-top: 0px;
     text-align: center;
 }
@@ -328,9 +311,8 @@ body {
 }
 
 .grid-container {
-    display: grid;
-    grid-auto-columns: minmax(0, 1fr);
-    /* grid-auto-flow: column; */
+    display: flex;
+    flex-direction: row;
     align-items: center;
-    gap: 15px;
+    gap: 30px;
 }
