--- a/css/stage/three.css
+++ b/css/stage/three.css
@@ -132,10 +132,10 @@ body {
 }
 
 .panel-speakers {
-    width: 1100px;
-    max-width: 1090px;
+    width: 1040px;
+    max-width: 1040px;
     position: absolute;
-    top: 568px;
+    top: 460px;
     left: 692px;
 }
 
@@ -158,7 +158,7 @@ body {
 }
 
 .profile-picture-small {
-    width: 100%;
+    width: auto;
     align-items: center;
 }
 
@@ -194,8 +194,9 @@ body {
 .speakers {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    gap: 100px;
+    justify-content: flex-start;
+    gap: 60px;
+    flex-wrap: wrap;
 }
 
 .speakers.more {
@@ -311,6 +312,7 @@ body {
 
 .grid-container {
     display: flex;
-    flex-direction: column;
-    gap: 10px;
+    flex-direction: row;
+    align-items: center;
+    gap: 30px;
 }
