--- a/css/stage/three.css
+++ b/css/stage/three.css
@@ -224,7 +224,7 @@ body {
     margin-left: 0px;
     margin-top: 0px;
     padding-top: 0px;
-    text-align: center;
+    text-align: left;
 }
 
 .speaker-info-small {
