--- a/bin/templates/agenda/stage-image.hbs
+++ b/bin/templates/agenda/stage-image.hbs
@@ -186,7 +186,7 @@
             <div class="speaker-info">
               <div class="speaker-name">{{{longTitle name 18}}}</div>
               <div class="speaker-job-title">{{shortJob}}</div>
-              <div class="speaker-company">{{{multiline company}}}</div>
+              <div class="speaker-company">{{{replaceSpace company}}}</div>
             </div>
           </div>
         </div>
@@ -209,7 +209,7 @@
           <div class="speaker-info-small">
             <div class="speaker-name">{{name}}</div>
             <div class="speaker-job-title">{{shortJob}}</div>
-            <div class="speaker-company">{{{multiline company}}}</div>
+            <div class="speaker-company">{{{replaceSpace company}}}</div>
           </div>
         </div>
       {{/each}}
@@ -223,7 +223,7 @@
           <div class="speaker-info-small">
             <div class="speaker-name">{{name}}</div>
             <div class="speaker-job-title">{{shortJob}}</div>
-            <div class="speaker-company">{{{multiline company}}}</div>
+            <div class="speaker-company">{{{replaceSpace company}}}</div>
           </div>
         </div>
       {{/each}}
