Use webp where available.

--- a/bin/templates/events/recent.hbs
+++ b/bin/templates/events/recent.hbs
@@ -5,9 +5,9 @@
             <div>
                 <picture>
                     <source srcset="{{webp img}}"
-                        type="image/webp">
+                        type="image/webp"/>
                     <img class="hero-story"
-                        decoding="async" fetchpriority="high"  src="{{img}}" loading="lazy">
+                        decoding="async" fetchpriority="high" src="{{img}}" loading="lazy"/>
                 </picture>
             </div>
             <div class="story-content">
